--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ repositories {
 }
 
 dependencies {
-  compile group: 'io.reactivex', name: 'rxjava', version: '1.0.14'
+  compile group: 'io.reactivex', name: 'rxjava', version: '1.1.+'
   testCompile group: 'org.mockito', name: 'mockito-all', version: '1.9.5'
   testCompile group: 'junit', name: 'junit-dep', version: '4.11'
 }
