--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,16 @@ sourceSets {
   }
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
 eclipse {
     classpath {
         downloadSources = true
